--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "tdd"
   ],
   "author": "Kelvin Modesto",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/kelvinmodesto/jstdd/issues"
   },
