--- a/package.json
+++ b/package.json
@@ -18,5 +18,12 @@
   "bugs": {
     "url": "https://github.com/kelvinmodesto/jstdd/issues"
   },
-  "homepage": "https://github.com/kelvinmodesto/jstdd#readme"
+  "homepage": "https://github.com/kelvinmodesto/jstdd#readme",
+  "devDependencies": {
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0"
+  }
 }
