--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "tdd",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src/*.js",
+    "prepush":"npm run lint"
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,7 @@
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0"
+    "eslint-plugin-react": "^7.7.0",
+    "husky": "^0.14.3"
   }
 }
