--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src/*.js",
-    "prepush":"npm run lint"
+    "prepush": "npm run lint",
+    "build": "webpack --colors --progress",
+    "watch": "npm run build --watch"
   },
   "repository": {
     "type": "git",
@@ -22,11 +24,21 @@
   },
   "homepage": "https://github.com/kelvinmodesto/jstdd#readme",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015-native-modules": "^6.9.4",
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "husky": "^0.14.3"
+    "husky": "^0.14.3",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.10"
+  },
+  "dependencies": {
+    "ramda": "^0.25.0"
   }
 }
