--- a/package.json
+++ b/package.json
@@ -28,15 +28,21 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-native-modules": "^6.9.4",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.10",
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
+    "file-loader": "^1.1.11",
     "husky": "^0.14.3",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
     "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.10",
