--- a/package.json
+++ b/package.json
@@ -39,8 +39,12 @@
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
+    "fs": "0.0.1-security",
     "husky": "^0.14.3",
+    "node-sass": "^4.7.2",
+    "path": "^0.12.7",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "uglifyjs-webpack-plugin": "^1.2.2",
