--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "tdd",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/mocha tests/**/*.spec.js",
     "lint": "eslint src/*.js",
     "prepush": "npm run lint",
     "build": "webpack --colors --progress",
@@ -33,6 +33,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-native-modules": "^6.9.4",
     "babel-preset-react": "^6.24.1",
+    "chai": "^4.1.2",
     "css-loader": "^0.28.10",
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
@@ -43,6 +44,7 @@
     "file-loader": "^1.1.11",
     "fs": "0.0.1-security",
     "husky": "^0.14.3",
+    "mocha": "^5.0.4",
     "node-sass": "^4.7.2",
     "path": "^0.12.7",
     "sass-loader": "^6.0.7",
